--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <name>INeedATalk</name>
     <description>INeedATalk</description>
     <modules>
-        <module>chat</module>
         <module>chat-service</module>
         <module>room-service</module>
     </modules>
@@ -20,11 +19,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
-        <mysql.version>8.0.21</mysql.version>
+        <mysql.version>8.0.28</mysql.version>
         <mybatis.version>2.1.3</mybatis.version>
         <springboot.version>2.7.1</springboot.version>
         <log4j.version>2.19.0</log4j.version>
         <junit.version>4.12</junit.version>
+        <druid.version>1.2.8</druid.version>
     </properties>
 
     <!-- 子块基础之后，提供作用：锁定版本 + 子module不用写 groupId 和 version -->
