--- a/chat-service/src/main/resources/application.yaml
+++ b/chat-service/src/main/resources/application.yaml
@@ -1,11 +1,13 @@
 server:
   port: 8082
 spring:
+  application:
+    name: chatserver
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/room?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/chat?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
   cloud:
     nacos:
       discovery:
