--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
         <mysql.version>8.0.28</mysql.version>
         <mybatis.version>2.1.3</mybatis.version>
-        <springboot.version>2.7.1</springboot.version>
+        <springboot.version>2.6.1</springboot.version>
         <log4j.version>2.19.0</log4j.version>
         <junit.version>4.12</junit.version>
         <druid.version>1.2.8</druid.version>
@@ -36,8 +36,7 @@
                 <version>3.0.0</version>
             </dependency>
 
-            <!-- 下面三个基本是微服务架构的标配 -->
-            <!--spring boot 2.7.1-->
+            <!--spring boot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -45,7 +44,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- spring cloud Hoxton.SR10 -->
+            <!-- spring cloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
