--- a/room-service/src/main/resources/application.yaml
+++ b/room-service/src/main/resources/application.yaml
@@ -1,8 +1,10 @@
 server:
   port: 8081
 spring:
+  application:
+    name: roomserver
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
     url: jdbc:mysql://localhost:3306/room?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
