--- a/chat-service/src/main/resources/application.yaml
+++ b/chat-service/src/main/resources/application.yaml
@@ -12,3 +12,10 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848 # nacos 服务地址
+        cluster-name: WH
+  rabbitmq:
+    host: localhost
+    port: 5672 # rabbit mq 端口
+    username: root
+    password: root
+    virtual-host: /
