--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
                 <version>3.0.0</version>
             </dependency>
 
+            <!--spring amqp-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+            </dependency>
+
             <!--spring boot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
