--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>${springboot.version}</version>
             </dependency>
 
             <!--spring boot-->
