--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
                 <version>3.0.0</version>
             </dependency>
 
+            <!--websocket-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
+
             <!--spring amqp-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
