--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -17,6 +17,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--spring amqp-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
