--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         <junit.version>4.12</junit.version>
         <druid.version>1.2.8</druid.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+    </dependencies>
 
     <!-- 子块基础之后，提供作用：锁定版本 + 子module不用写 groupId 和 version -->
     <dependencyManagement>
