--- a/room-service/pom.xml
+++ b/room-service/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <!--spring amqp-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!--websocket-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
