--- a/chat-service/src/main/resources/application.yaml
+++ b/chat-service/src/main/resources/application.yaml
@@ -7,15 +7,17 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/chat?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/room?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
   cloud:
     nacos:
       discovery:
-        server-addr: 10.134.58.144:8848 # nacos 服务地址
+        # nacos 服务地址
+        server-addr: 10.134.58.144:8848
         cluster-name: WH
   rabbitmq:
     host: 192.168.106.102
-    port: 5672 # rabbit mq 端口
+    # rabbit mq 端口
+    port: 5672
     username: root
     password: root
     virtual-host: /
