--- a/room-service/src/main/resources/application.yaml
+++ b/room-service/src/main/resources/application.yaml
@@ -1,5 +1,8 @@
 server:
   port: 8083
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.kuangjun.model
 spring:
   application:
     name: roomserver
